--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 
 </head>
 <body>
+    <header>
+        header
+    </header>
+ 
+    <main>
+        <section>
+            hero
+        </section>
 
-    
+        <section>
+            trio
+
+        </section>
+    </main>
 </body>
 </html>
