--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+<link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <header>
@@ -21,7 +22,8 @@
  
     <main>
         <section>
-            hero
+           <div>text</div>
+           <img src="#" alt="#">
         </section>
 
         <section>
