--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
 </head>
 <body>
     <header>
-        header
+        <img src="#" alt="Logo">
+        <nav>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </nav>
     </header>
  
     <main>
         <section>
            <div>text</div>
-           <img src="#" alt="#">
+           <img src="./person.webp" alt="zmogeliukas">
         </section>
 
         <section>
