--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
 <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <header>
-        <img src="#" alt="Logo">
-        <nav>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+    <header class="container topdalis">
+        <img class="logo" src="./logo 2.webp" alt="Logo">
+        <nav class="">
+            <a class="active" href="#">Link</a>
+            <a class="toplink" href="#">Link</a>
+            <a class="toplink" href="#">Link</a>
+            <a class="toplink" href="#">Link</a>
         </nav>
+        <a class="batonai" href="#">Try again</a>
     </header>
  
-    <main>
-        <section>
-           <div>text</div>
-           <img src="./person.webp" alt="zmogeliukas">
+    <main class="mainas">
+        <section class="container">
+           <div class="kairyssonas">text</div>
+           <img class="zmogeliukas" src="./person.webp" alt="zmogeliukas">
         </section>
 
-        <section>
+        <section class="container botdalis">
             trio
 
         </section>
